@@ -1,5 +1,11 @@
 2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* lib/gaupol/gtk/dialogs/multiclose.py:
+	* lib/gaupol/gtk/dialogs/preferences.py:
+	  Added or fixed testing.
+
+2006-01-28  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* data/glade/language-dialog.glade:
 	  Made dialog invisible.
 
